--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,12 @@
-language: cpp
-compiler:
-  - clang
+language: julia
+os:
+  - linux
+julia:
+  - 0.3
+  - 0.4
+  - nightly
 notifications:
   email: false
-env:
-  matrix:
-    - JULIAVERSION="juliareleases"
-    - JULIAVERSION="julianightlies"
-before_install:
-  - sudo add-apt-repository ppa:staticfloat/julia-deps -y
-  - sudo add-apt-repository ppa:staticfloat/${JULIAVERSION} -y
-  - sudo apt-get update -qq -y
-  - sudo apt-get install libpcre3-dev julia -y
-  - sudo apt-get install curl
 script:
-  - julia -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.build("TestImages"); Pkg.test("TestImages")'
+    - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+    - julia -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.build("TestImages"); Pkg.test("TestImages")'
