--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,22 @@ os:
   - linux
 julia:
   - 0.5
+  - 0.6
+  - 0.7
   - nightly
 notifications:
   email: false
-script:
-    - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-    - julia -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.build("TestImages"); Pkg.test("TestImages")'
+git:
+  depth: 99999999
+
+matrix:
+  allow_failures:
+    - julia: 0.7
+    - julia: nightly
+
+after_success:
+  # push coverage results to Coveralls
+  - julia -e 'cd(Pkg.dir("$pkg_name")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  # push coverage results to Codecov
+  - julia -e 'cd(Pkg.dir("$pkg_name")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+      
