--- a/.travis.yml
+++ b/.travis.yml
@@ -2,22 +2,12 @@ language: julia
 os:
   - linux
 julia:
-  - 0.6
   - 0.7
+  - 1.0
   - nightly
 notifications:
   email: false
-git:
-  depth: 99999999
-
-matrix:
-  allow_failures:
-    - julia: 0.7
-    - julia: nightly
 
 after_success:
-  # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("$pkg_name")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
-  - julia -e 'cd(Pkg.dir("$pkg_name")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
-      
+  - julia -e 'using Pkg; cd(joinpath(pathof(TestImages), "..", "..")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
