--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,10 @@ FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
 
 [compat]
-julia = ">= 0.7"
+julia = "1"
+AxisArrays = "0.3"
+FileIO = "1"
+ZipFile = "0.7, 0.8"
 
 [extras]
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
