--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,14 @@ language: julia
 os:
   - linux
   - osx
+  - windows
 julia:
   - 1.0
-  - 1.1
+  - 1.3
   - nightly
 notifications:
   email: false
 
 after_success:
   # push coverage results to Codecov
-  - julia -e 'using Pkg; cd(joinpath(pathof(TestImages), "..", "..")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'using Pkg, TestImages; cd(joinpath(pathof(TestImages), "..", "..")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
