--- a/Project.toml
+++ b/Project.toml
@@ -6,10 +6,12 @@ version = "1.0.3"
 AxisArrays = "39de3d68-74b9-583c-8d2d-e117c070f3a9"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+StringDistances = "88034a9c-02f8-509d-84a9-84ec65e18404"
 
 [compat]
 AxisArrays = "0.3, 0.4"
 FileIO = "1"
+StringDistances = "0.6"
 julia = "1.3"
 
 [extras]
@@ -17,7 +19,9 @@ Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 FixedPointNumbers = "53c48c17-4a7d-5ca2-90c5-79b7896eea93"
 ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 OMETIFF = "2d0ec36b-e807-5756-994b-45af29551fcf"
+ReferenceTests = "324d217c-45ce-50fc-942e-d289b448e8cf"
+Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Colors", "FixedPointNumbers", "ImageMagick", "OMETIFF", "Test"]
+test = ["Colors", "FixedPointNumbers", "ImageMagick", "OMETIFF", "ReferenceTests", "Suppressor", "Test"]
