--- a/.github/workflows/upload_artifacts.yml
+++ b/.github/workflows/upload_artifacts.yml
@@ -37,7 +37,15 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: ${{ github.ref }}
           body: |
-            hash: ${{ steps.build_artifacts.outputs.tarball_hash }}
+            Example `Artifacts.toml`:
+            ```
+            [images]
+            git-tree-sha1 = "${{ steps.build_artifacts.outputs.tree_hash }}"
+
+                [[images.download]]
+                sha256 = "${{ steps.build_artifacts.outputs.tarball_hash }}"
+                url = "https://URL/TO/images.tar.gz"
+            ```
           draft: false
           prerelease: false
       - name: Upload Release Asset
