--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "1.3.0"
 AxisArrays = "39de3d68-74b9-583c-8d2d-e117c070f3a9"
 ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 StringDistances = "88034a9c-02f8-509d-84a9-84ec65e18404"
 
