--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,7 @@ AxisArrays = "0.3, 0.4"
 ColorTypes = "0.8, 0.9, 0.10"
 FileIO = "1"
 OffsetArrays = "1"
-StringDistances = "0.6, 0.7, 0.8"
+StringDistances = "0.10"
 julia = "1.3"
 
 [extras]
