--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,8 @@ version = "1.5.0"
 AxisArrays = "39de3d68-74b9-583c-8d2d-e117c070f3a9"
 ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
+ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 StringDistances = "88034a9c-02f8-509d-84a9-84ec65e18404"
@@ -13,6 +15,8 @@ StringDistances = "88034a9c-02f8-509d-84a9-84ec65e18404"
 [compat]
 AxisArrays = "0.3, 0.4"
 ColorTypes = "0.8, 0.9, 0.10, 0.11"
+ImageIO = "0.3, 0.4, 0.5"
+ImageMagick = "1"
 FileIO = "1"
 OffsetArrays = "1"
 StringDistances = "0.10"
