--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ julia = "1.3"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 FixedPointNumbers = "53c48c17-4a7d-5ca2-90c5-79b7896eea93"
 ImageContrastAdjustment = "f332f351-ec65-5f6a-b3d1-319c6670881a"
+ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 OMETIFF = "2d0ec36b-e807-5756-994b-45af29551fcf"
 ReferenceTests = "324d217c-45ce-50fc-942e-d289b448e8cf"
@@ -29,4 +30,4 @@ Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Colors", "FixedPointNumbers", "ImageMagick", "ImageContrastAdjustment", "OMETIFF", "ReferenceTests", "Suppressor", "Test"]
+test = ["Colors", "FixedPointNumbers", "ImageIO", "ImageMagick", "ImageContrastAdjustment", "OMETIFF", "ReferenceTests", "Suppressor", "Test"]
