--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,7 @@ StringDistances = "88034a9c-02f8-509d-84a9-84ec65e18404"
 [compat]
 AxisArrays = "0.3, 0.4"
 ColorTypes = "0.8, 0.9, 0.10, 0.11"
-ImageIO = "0.3, 0.4, 0.5"
+ImageIO = "0.3, 0.4, 0.5, 0.6"
 ImageMagick = "1"
 FileIO = "1"
 OffsetArrays = "1"
