--- a/.github/workflows/UnitTest.yml
+++ b/.github/workflows/UnitTest.yml
@@ -16,7 +16,7 @@ jobs:
       # https://github.com/actions/toolkit/issues/399
       fail-fast: false
       matrix:
-        julia-version: ['1.6', '1', 'nightly']
+        julia-version: ['1.6', '1']
         os: [ubuntu-latest]
         include:
           - os: windows-latest
@@ -25,14 +25,14 @@ jobs:
             julia-version: '1'
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: "Set up Julia"
-        uses: julia-actions/setup-julia@v1
+        uses: julia-actions/setup-julia@v2
         with:
           version: ${{ matrix.julia-version }}
 
       - name: Cache artifacts
-        uses: actions/cache@v1
+        uses: actions/cache@v4
         env:
           cache-name: cache-artifacts
         with:
@@ -49,3 +49,4 @@ jobs:
       - uses: codecov/codecov-action@v1
         with:
           file: lcov.info
+          token: ${{ secrets.CODECOV_TOKEN }}
