--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "TestImages"
 uuid = "5e47fb64-e119-507b-a336-dd2b206d9990"
-version = "1.8.0"
+version = "1.9.0"
 
 [deps]
 AxisArrays = "39de3d68-74b9-583c-8d2d-e117c070f3a9"
@@ -14,13 +14,13 @@ StringDistances = "88034a9c-02f8-509d-84a9-84ec65e18404"
 
 [compat]
 AxisArrays = "0.3, 0.4"
-ColorTypes = "0.8, 0.9, 0.10, 0.11"
-ImageIO = "0.3, 0.4, 0.5, 0.6"
+ColorTypes = "0.11, 0.12"
+ImageIO = "0.5, 0.6"
 ImageMagick = "1"
 FileIO = "1"
 OffsetArrays = "1"
 StringDistances = "0.10, 0.11"
-julia = "1.3"
+julia = "1.6"
 
 [extras]
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
